# ODESEC

./: .gitignore  .gitmodules  Cargo.toml  README.md  poc.sol
app/: Cargo.toml
app/src/: cert.rs  exploit.rs  main.rs  proof.rs  prover.rs  verify.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
chains/evm/: Cargo.toml
chains/evm_core/: Cargo.toml
chains/evm_core/src/: db.rs  input_builder.rs  lib.rs  mpt.rs  poc_compiler.rs  provider.rs  utils.rs
dapp/: package.json
guests/: Cargo.toml
guests/cert/: Cargo.toml
guests/cert/src/: main.rs
guests/exploit/: Cargo.toml
guests/exploit/src/: main.rs
guests/src/: methods.rs
tg_bot/: config.py.example  main.py  requirements.txt
