[workspace]
resolver = "2"
members = ["app", "guests"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
hashbrown = { version = "0.14.3", features = ["inline-more"] }
risc0-build = { version = "0.21" }
risc0-zkvm = { version = "0.21", default-features = false }
revm-primitives = { version = "2.0", default_features = false }
revm = { version = "5.0", default-features = false, features = [
    "std",
    "serde",
    "optimism",
] }