[package]
name = "odsec"
version = "0.1.0"
edition = "2021"
default-run = "odsec"

[dependencies]
x509-parser = { version = "0.16.0" }
alloy-primitives = { version = "0.6.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = "0.6"
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
ethers-contract = { version = "2.0", features = ["optimism"] }
ethers-core = { version = "2.0", features = ["optimism"] }
ethers-providers = { version = "2.0", features = ["optimism"] }
hex = "0.4.3"
log = "0.4"
risc0-zkvm = { workspace = true, features = ["prove"] }
serde = "1.0"
tokio = { version = "1.23", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
guests = { path = "../guests" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.18"
