[package]
name = "odesec"
version = "0.1.0"
edition = "2021"
default-run = "odesec"

[dependencies]
x509-parser = { version = "0.16.0" }
alloy-primitives = { version = "0.6.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }

alloy-sol-types = "0.6"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.8" }
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { version = "0.7" }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
ethers-core = { version = "2.0"}
hex = "0.4.3"
log = "0.4"
risc0-zkvm = { workspace = true, features = ["prove"] }
serde = "1.0"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
guests = { path = "../guests" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.18"

[features]
metal = ["risc0-zkvm/metal"]