[package]
name = "chains-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
ethers-core = { version = "2.0" }
ethers-providers = { version = "2.0"}
eyre = "0.6.8"
log = "0.4"
futures = "0.3.28"
hashbrown = { version = "0.14", features = ["inline-more"] }
hex = "0.4.3"
itertools = "0.10.5"
once_cell = "1.17.1"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
revm = { workspace = true }
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros"] }
url = "2.3.1"
bridge = {path = "../../bridge"}
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde"] }
alloy-sol-types = "0.6"
alloy-dyn-abi = "0.6"
foundry-compilers = { git = "https://github.com/foundry-rs/compilers", tag = "v0.3.13", features=['svm-solc'] }

[build-dependencies]
foundry-compilers = { git = "https://github.com/foundry-rs/compilers", tag = "v0.3.13", features=['svm-solc'] }
alloy-json-abi = { version= "0.6"}
serde_json = "1.0.96"