[package]
name = "cert"
version = "0.1.0"
edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "0.21", default-features = false, features = ['std'] }
x509-parser = { version = "0.16.0" }
jwt-compact = { version = "0.8", features = ["rsa"] }
rsa = { version = "0.9.6", default-features = false }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"